examples/illtyped/gradingError.gr
foo : Int |2| -> Int |4|
foo |x| = |(x + x)|
